; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_metadata.c_ID3TAG_Parse_Handler.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_metadata.c_ID3TAG_Parse_Handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i64, i8*)* @ID3TAG_Parse_Handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ID3TAG_Parse_Handler(i32 %0, i32* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @ID3HandleTag(i32* %12, i64 %13, i32 %14, i32* %15, i32* null)
  %17 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %17
}

declare dso_local i32 @ID3HandleTag(i32*, i64, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
